overflow fix

--- a/shared/css/cyph.com.scss
+++ b/shared/css/cyph.com.scss
@@ -21,7 +21,7 @@ html:not(.load-complete) {
 
 section#main {
 	background-color: transparent !important;
-	overflow-x: hidden;
+	overflow-x: hidden !important;
 }
 
 #main {
